fixed word wrap

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -409,6 +409,10 @@ a, .logo {
   padding-bottom: 5px;
 }
 
+.each-hi5{
+  word-space: normal;
+}
+
 ::-webkit-input-placeholder {
    color: gray;
 }
